@@ -92,3 +92,5 @@ graph.copyQualifiedTableName= Copy qualified table name
 graph.allTablesDbOrderRequested=For all tables: DB order
 graph.allTablesByNameOrderRequested=For all tables: Order by name
 graph.allTablesPkConstOrderRequested=For all tables: Order PKs/constraints on top
+
+graph.showQualifiedTableNames=Show qualified table names
